# yashsriram.github.io

./: .gitignore  Cargo.toml  README.md  TODO.md  config.toml  dag.tex  life.tex  main.py  main.tex  math.tex  math_and_science.tex  purpose.tex  purpose_of_this.tex  scratch.tex  statement.py  structure.tex  the_process_of_learning.tex  todo.md  utils.py  why_this_effort.tex
.cargo/: config.toml
coding/: main.tex  tips.tex
content/: _index.md  codeforces.rs  convex.md  convex_hull.md  convex_spiral.md  convexhull.md  data_fitting.md  diff_drive.md  does_intersect.md  gaussian-map-variance-only-decreases.md  gaussian-mle-variance-can-increase.md  hulls.md  human_learning.md  intersect.md  intersections.md  learning.md  particle_filter.md  pose_opt.md  quat_rot.md  rotation.md  rotations.md  structure_of_knowledge.md  three_dim_geometry.md  triangulation.md  voronoi.md  wasm.md
db/: journal.html  latest.json  latest.md  latest.txt
deprecated/: .gitignore  README.md  statement.py  utils.py
effortless/: Cargo.toml
examples/: ch2-1.rs  ch2-2.rs  codeforces.rs  convex.rs  convex_hull.rs  convex_spiral.rs  convexhull.rs  diff_drive.rs  does_intersect.rs  ln_seg_xt.rs  look_towards_me.rs  merge_intervals.rs  mle.rs  particle_filter.rs  power_set.rs  prm_search.rs  quat_rot.rs  search_montage.rs  sort.rs  substruct.rs  xn_2_lnsegs.rs  xn_2_rays.rs
math/: comparisions.tex  geometry.tex  how_to_use.tex  linear_algebra.tex  main.tex  math.tex  numbers.tex  preface.tex  sets.tex  structure.tex  the_process_of_learning.tex  vectors.tex  what_is_math.tex
src/: graph.rs  (+6 more)
(+153 files in other folders)
