[package]
name = "bricks"
version = "0.0.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
ordered-float = "2.8.0"
bevy = { version = "0.12.1", features = ["dynamic_linking"] }

# Enable small opt for our code and high opt for dependencies in debug mode
[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
