[package]
name = "bricks"
version = "0.0.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
ordered-float = "2.8.0"

[dependencies.bevy]
version = "0.15.3"
default-features = false
features = [
  "bevy_color",
  "bevy_sprite",
  "bevy_core_pipeline",
  "bevy_gizmos",
  "bevy_render",
  "bevy_window",
  "bevy_winit",
  "default_font",
  "multi_threaded",
  "webgl2",
  "x11",
  "dynamic_linking",     # Dynamic linking for faster compile-times
]
